--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "date-picker": "^0.5.0",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
