--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.6",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "date-picker": "^0.5.0",
