--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "apexcharts": "^5.3.3",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "date-picker": "^0.5.0",
     "framer-motion": "^12.18.1",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.542.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-datepicker": "^8.3.0",
